# tinyml-predictive-maintenance

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
deployment/: predictive_maintenance_model.c  predictive_maintenance_model.h
models/: mahalanobis_distance_model.pkl
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_deployment_quantization.ipynb
src/tinyml_predictive_maintenance/: __init__.py  cli.py  data.py  features.py  model.py  quantize.py
tests/: test_pipeline.py
